# project-switch

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: tests.yml
src/: main.rs  project-switch.bash  project-switch.zsh
